<resources>
    <string name="app_name">Top Priority</string>
    <string name="action_about">About</string>
    <string name="title_activity_task_detail">Task Details</string>

    <string name="label_task_title">Task</string>
    <string name="label_task_priority">Level of priority:</string>
    <string name="label_task_priority_low">- Low</string>
    <string name="label_task_priority_high">- High</string>
    <string name="select_due_date">Select due date:</string>
    <string name="due_date">Due Date</string>
    <string name="optional">(optional)</string>

    <string name="show_all">Show All Tasks</string>
    <string name="show_more">Show More Tasks</string>
</resources>
